[tool.poetry]
name = "incolume.py.pct_extra"
version = "0.1.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
packages = [
  {include = "incolume", from=""},
]
[tool.poetry.dependencies]
python = "^3.6"

# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
requests = {version="^2.27.0", optional=true}
httpx = {version="^0.21.0", optional=true}
unidecode = {version="^1.3.4", optional=true}

[tool.poetry.extras]
encode = ["unidecode"]
requests = ["requests"]
httpx = ["httpx"]

all = ["unidecode", "httpx", "requests"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
